--- a/app/pom.xml
+++ b/app/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.weatherstations</groupId>
 	<artifactId>WeatherStations</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1</version>
 	<name>WeatherStations</name>
 	<description>API for weather stations</description>
 	<url/>
@@ -62,6 +62,9 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>
+			WeatherStations
+		</finalName>
 	</build>
 
 </project>
