Better compose and maven compiling

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,10 +1,22 @@
 
-# Virtualization environment for Java 17
+#
+# Build stage
+#
+FROM maven:3.8.1-openjdk-17 AS build
+WORKDIR /app
+COPY app/pom.xml .
+COPY app/src ./src
+RUN mvn -f pom.xml clean package -DskipTests
+
+#
+# Launch
+#
+
 FROM openjdk:17-jdk-slim
 
 WORKDIR /app
 
-COPY target/WeatherStations.jar WeatherStations.jar
+COPY app/target/WeatherStations.jar WeatherStations.jar
 
 EXPOSE 8080
 
