Job and Quartz setup

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=user
 spring.datasource.password=pass
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.quartz.job-store-type=memory
